--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+
+# PERSO
+#
+#
+# les .objets et les sorties binaires
+*.o
+*.out
